# nautilus-open-terminal

./: ChangeLog  Makefile.am  NEWS  OChangeLog-2006-12-28  TODO  autogen.sh  configure.in  nautilus-open-terminal.doap  nautilus-open-terminal.schemas.in
po/: .cvsignore  ChangeLog  LINGUAS  POTFILES.in  ar.po  be.po  be@latin.po  bg.po  bn_IN.po  ca.po  cs.po  da.po  de.po  el.po  en_CA.po  en_GB.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  gu.po  he.po  hu.po  it.po  ja.po  ka.po  ko.po  lt.po  lv.po  mk.po  ml.po  mr.po  nb.po  ne.po  nl.po  oc.po  or.po  pa.po  (+19 more)
src/: Makefile.am  eel-gnome-extensions.c  nautilus-open-terminal.c  open-terminal.c
